kustomize/overlays/prod/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-scraper
  labels:
    app: twitter-scraper
spec:
  template:
    spec:
      containers:
        - name: twitter-scraper
