kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-scraper-ingress-internal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: internal
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /scrape
            pathType: Prefix
            backend:
              service:
                name: twitter-scraper-service
                port:
                  number: 5000
